Kubernetes/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: grafana-config
            mountPath: /etc/grafana
          - name: grafana-ds
            mountPath: /etc/grafana/provisioning/datasources
      volumes:
      - name: grafana-config
        configMap:
          defaultMode: 420
          name: grafana-configmap
      - name: grafana-ds
        configMap:
          defaultMode: 420
          name: grafana-ds-configmap
